# tarengine.rs

./: level.code-workspace
level_1_hexagonal/: Cargo.toml
level_1_hexagonal/src/: main.rs
level_1_hexagonal/src/hexagonal/: coord.rs  map.rs  mod.rs
level_2_amethyst_pong/: Cargo.toml
level_2_amethyst_pong/config/: display.ron
level_2_amethyst_pong/src/: main.rs  pong.rs
level_2_amethyst_pong/src/systems/: bounce.rs  move_ball.rs  paddle.rs  winner.rs
level_3_amethyst_boids/: Cargo.toml
level_3_amethyst_boids/assets/textures/: boid_spritesheet.ron
level_3_amethyst_boids/config/: boid.ron  display.ron
level_3_amethyst_boids/src/: config.rs  game.rs  main.rs
level_3_amethyst_boids/src/game/components/: boid.rs  fps.rs  mod.rs
level_3_amethyst_boids/src/systems/: boid.rs  camera_system.rs  fps_system.rs  mod.rs  move_system.rs
level_4_godot_pong/: .gitignore  main_scripts.gdnlib  project.godot  tileset.tres
level_4_godot_pong/scenes/: Ball.gdns  Node.gdns  Player_1.gdns  Sprite.gdns  game_ui.gdns  game_ui.tscn  level_test.tscn
level_4_godot_pong/scripts/: Cargo.toml
level_4_godot_pong/scripts/src/: ball.rs  lib.rs  paddle.rs  score_board.rs
level_5_bevy_pong/: Cargo.toml
level_5_bevy_pong/assets/textures/: pong_spritesheet.png.import  pong_spritesheet.tres
level_5_bevy_pong/src/: main.rs
level_6_bevy_boids/: Cargo.toml
level_6_bevy_boids/src/: fps_plugin.rs  main.rs
level_7_bevy_breakout/: Cargo.toml
level_7_bevy_breakout/src/: main.rs
