[package]
name = "level_3_amethyst_boids"
version = "0.1.0"
authors = ["Damien Plumettaz <damien.plumettaz@bluewin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
rand = "0.8.0"
serde = "1.0.130"

[dependencies.amethyst]
version = "0.15"
features = ["vulkan"]