[package]
name = "level_6_bevy_boids"
version = "0.1.0"
authors = ["Damien Plumettaz <damien.plumettaz@bluewin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
bevy_prototype_lyon = "0.3.1"
bevy_egui = "0.7"
bevy-inspector-egui = "0.6.1"
rand = "0.8.0"